--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WEBGLTEST.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WEBGLTEST.data.br",
-        frameworkUrl: buildUrl + "/WEBGLTEST.framework.js.br",
-        codeUrl: buildUrl + "/WEBGLTEST.wasm.br",
+        dataUrl: buildUrl + "/WEBGLTEST.data",
+        frameworkUrl: buildUrl + "/WEBGLTEST.framework.js",
+        codeUrl: buildUrl + "/WEBGLTEST.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "BattlewokenRewritten",
