--- a/index.html
+++ b/index.html
@@ -105,14 +105,9 @@
         createUnityInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
+          window.unityInstance = unityInstance;
           loadingBar.style.display = "none";
           fullscreenButton.onclick = () => {
-            navigator.clipboard.readText().then(function(text) {
-                unityInstance.SendMessage("Menus", "JavaScriptPasteCall", text.toString())
-                console.log("Pasted from clipboard: " + text);
-            }, function(err) {
-                console.error("Failed to paste from clipboard: " + err);
-            });
             unityInstance.SetFullscreen(1);
           };
         }).catch((message) => {
